--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "react-cli",
+  "name": "babylon",
   "version": "1.0.0",
-  "description": "react-project",
+  "description": "babylon",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV='production' webpack",
-    "dll": "webpack --config webpack.dll.config.js",
-    "dev": "webpack-dev-server --hot"
+    "build": "NODE_ENV='production' webpack --config build/webpack.config.js",
+    "dll": "webpack --config build/webpack.dll.config.js --display-modules",
+    "dev": "webpack-dev-server --hot --config build/webpack.config.js"
   },
   "author": "Msdhu",
-  "license": "LICENSE",
+  "license": "ISC",
   "dependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "^3.0.0-beta.6"
+    "babel-runtime": "^6.26.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.1.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^2.1.2",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "postcss-import": "^11.0.0",
